--- a/assets/main.css
+++ b/assets/main.css
@@ -30,8 +30,8 @@ overflow:hidden;
 
 
 .video-container embed {
-    -webkit-transform:scale(0.5);
-    -moz-transform-scale(0.5);
+    /* -webkit-transform:scale(0.5); */
+    /* -moz-transform-scale(0.5); */
     width:175vw;
     height:200vh;
 overflow:hidden;
@@ -116,7 +116,6 @@ a:hover{color:#AA88FF }
 footer,nav{margin-top:0 }
 
 dt{
-  font-family:'Sorts Mill Goudy',sans-serif;
 clear:left;
 float:left;
 margin-right:2em;
@@ -125,8 +124,12 @@ dd{font-style: italic;}
 .invited-list dl{line-height:2em;}
 .invited-list dt, dd{margin-left:7em;}
 
-.dates dt, dd{margin-bottom:0.3em;}
+td{padding-bottom:0.2em;}
 
+td:nth-child(2) {
+    font-style: italic;
+    padding-left: 0.5em;
+}
 
 .bottom{padding-bottom:0 }
 .top{margin-bottom:0 }
@@ -221,7 +224,7 @@ main{padding-top:10.5em;width:100%;padding-bottom:1em;}
 
 .navbar-content {
     padding: 8px 8px;
-    -webkit-backface-visibility: hidden;
+    /* -webkit-backface-visibility: hidden; */
     opacity: 0;
     position: absolute;
     background-color: #aaaaaa;
